Fixed alignment

--- a/src/components/WrongNetworkPrompt/SignupPrompt.module.sass
+++ b/src/components/WrongNetworkPrompt/SignupPrompt.module.sass
@@ -1,7 +1,7 @@
 @import ../../styles/helpers
 
 .title
-    margin-bottom: 32px
+    margin-bottom: 16px
     padding-right: 56px
     padding-left: 60px
 
